comment out image url

--- a/src/page/checkout/checkout.style.scss
+++ b/src/page/checkout/checkout.style.scss
@@ -28,4 +28,15 @@
     margin-left: auto;
     font-size: 36px;
   }
+
+  button{
+    margin-left: auto;
+  }
+
+  .test-waring{
+    text-align: center;
+    color: red;
+    margin: 40px auto;
+    font-size: 25px;
+  }
 }
