--- a/src/page/checkout/checkout.style.scss
+++ b/src/page/checkout/checkout.style.scss
@@ -6,6 +6,10 @@
   align-items: center;
   margin: 50px auto 0;
 
+      @media screen and (max-width:800px){
+      width: 90%;
+    }
+
   .checkout-header {
     width: 100%;
     padding: 10px 0;
@@ -38,5 +42,9 @@
     color: red;
     margin: 40px auto;
     font-size: 23px;
+
+    @media screen and (max-width:800px){
+      font-size: 14px;      
+    }
   }
 }
