added mobile style to signin and signup

--- a/src/components/custom-button/custom-button.style.scss
+++ b/src/components/custom-button/custom-button.style.scss
@@ -16,6 +16,11 @@
   display: flex;
   justify-content: center;
 
+      @media screen and (max-width:800px){
+      width: 280px;
+      margin: 10px auto;
+    }
+
   &:hover {
     background-color: white;
     color: black;
