--- a/src/components/collection-item/collection-item.style.scss
+++ b/src/components/collection-item/collection-item.style.scss
@@ -5,6 +5,7 @@
   height: 350px;
   align-items: center;
   position: relative;
+  margin: 0 5px;
 
   .image {
     width: 100%;
@@ -20,6 +21,13 @@
     position: absolute;
     top: 255px;
     display: none;
+
+    @media screen and (max-width:800px){
+       display: block;
+       opacity: 0.9;
+       min-width: unset;
+       padding: 0 10px;
+    }
   }
  
     &:hover{
@@ -31,8 +39,21 @@
         opacity: 0.85;
         display: flex;
       }
-    
   }
+
+      @media screen and (max-width:800px){
+      width: 40vw;
+
+     &:hover{
+      .image{
+        opacity: unset;
+      }
+
+      .custom-button{
+        opacity: unset;
+      }
+  }
+    }
 
   .collection-footer {
     width: 100%;
@@ -44,10 +65,16 @@
     .name {
       width: 90%;
       margin-bottom: 15px;
+          @media screen and (max-width:800px){
+       font-size: 15px;
+    }
     }
 
     .price {
-      width: 10%;
+      // width: 10%;
+          @media screen and (max-width:800px){
+       font-size: 15px;
+    }
     }
   }
 }
