--- a/src/components/cart-dropdown/cart-dropdown.style.scss
+++ b/src/components/cart-dropdown/cart-dropdown.style.scss
@@ -11,19 +11,41 @@
   right: 40px;
   z-index: 5;
 
+    @media screen and (max-width:800px){
+       width: 200px;
+       height: 300px;
+       padding: 10px;
+       right: 25px;
+       top: 70px;
+    }
+
   .empty-message{
     font-size: 18px;
     margin: 50px auto;
   }
 
   .cart-items {
-    height: 335px;
+    height: 250px;
     display: flex;
     flex-direction: column;
     overflow: scroll;
+
+    @media screen and (max-width:800px){
+          height: 215px;
+    }
+
   }
 
   button {
     margin-top: auto;
+    position: absolute;
+        top: 280px;
+        right: 35px;
+
+     @media screen and (max-width:800px){
+       width: 90px;
+       top: 235px;
+       right: 15px;
+    }
   }
 }
