--- a/src/components/custom-button/custom-button.style.scss
+++ b/src/components/custom-button/custom-button.style.scss
@@ -15,8 +15,9 @@
   cursor: pointer;
   display: flex;
   justify-content: center;
+  border-radius: 5px;
 
-      @media screen and (max-width:800px){
+    @media screen and (max-width:800px){
       width: 280px;
       margin: 10px auto;
     }
@@ -24,7 +25,6 @@
   &:hover {
     background-color: white;
     color: black;
-    border: 1px solid black;
   }
 
   &.google-sign-in{
@@ -40,7 +40,6 @@
   &.inverted{
      background-color: white;
     color: black;
-    border: 1px solid black;
 
     &:hover{
        background-color: black;
