--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -32,6 +32,7 @@
 
     @media screen and (max-width:800px){
       width: 90%;
+      margin-left: 7px;
     }
 
     .option {
@@ -42,6 +43,19 @@
       padding:5px 10px;
       cursor: pointer;
     }
+    &.sign-out{
+      @media screen and (max-width:800px){
+        width: 75px;
+       }
     }
+    &.sign-in{
+      @media screen and (max-width:800px){
+        width: 65px;
+       }
+    }
+
+
+    }
+    
   }
 }
